# ros2_ws

./: README.md
guide_setup/: SETUP.md
src/pure_pursuit_controller/: CMakeLists.txt  package.xml
src/pure_pursuit_controller/config/: bridge_config.yaml
src/pure_pursuit_controller/include/: pure_pursuit_math.hpp
src/pure_pursuit_controller/launch/: simulation.launch.py
src/pure_pursuit_controller/src/: control_node.cpp  msg_adapter.py  pure_pursuit_math.hpp  pure_pursuit_node.cpp  test_steering.py  waypoints.txt
src/pure_pursuit_controller/urdf/: ackermann_car.urdf
src/pure_pursuit_controller/worlds/: line_track.sdf  oval_track.sdf
